--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <a href="#videos" class="cta">Watch Demo</a>
       </div>
       <div class="hero-video">
-        <iframe src="https://www.youtube.com/embed/aqz-KE-bpKQ" title="Product Demo" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/kIwmrk7LoDk?si=jX64aTLbdWhJ7ywN" title="Product Demo"></iframe>
       </div>
     </section>
 
