--- a/index.html
+++ b/index.html
@@ -79,7 +79,12 @@
         <a href="#videos" class="cta">Watch Demo</a>
       </div>
       <div class="hero-video">
-        <iframe src="https://www.youtube.com/embed/kIwmrk7LoDk?si=jX64aTLbdWhJ7ywN" title="Product Demo"></iframe>
+        <iframe 
+          src="https://www.youtube.com/embed/5yb2N3pnztU?autoplay=1&rel=0" 
+          title="Product Demo" 
+          allow="autoplay; encrypted-media" 
+          allowfullscreen>
+        </iframe>
       </div>
     </section>
 
