--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>SIH Product Demo</title>
-  <meta name="description" content="Stylish minimalistic SIH-themed product demo page with creative typography, shapes, and animations." />
+  <title>GuardianGo - SIH 2025</title>
+  <meta name="description" content="GuardianGo: Smart Tourist Safety Monitoring & Incident Response System by !VibeCoders for SIH 2025." />
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@400;500;600&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -62,10 +62,11 @@
 <body>
   <div class="container">
     <header>
-      <div class="logo">SIH Demo</div>
+      <div class="logo">GuardianGo</div>
       <nav>
         <a href="#features">Features</a>
         <a href="#videos">Demo Video</a>
+        <a href="#tech">Technical Approach</a>
         <a href="#team">Team</a>
       </nav>
     </header>
@@ -74,35 +75,24 @@
       <div class="shape-circle one"></div>
       <div class="shape-circle two"></div>
       <div class="hero-text">
-        <h1>Product Demo</h1>
-        <p>Explore a minimalistic yet stylish SIH-themed product landing page, featuring creative title underlines, soft shapes, animations, and a clean layout.</p>
+        <h1>GuardianGo</h1>
+        <p>Smart Tourist Safety Monitoring & Incident Response System using AI, Geo-Fencing, and Blockchain-based Digital ID. Built for safe and secure tourism.</p>
         <a href="#videos" class="cta">Watch Demo</a>
       </div>
       <div class="hero-video">
-        <iframe 
-          src="https://www.youtube.com/embed/5yb2N3pnztU?autoplay=1&rel=0" 
-          title="Product Demo" 
-          allow="autoplay; encrypted-media" 
-          allowfullscreen>
-        </iframe>
+        <iframe src="https://www.youtube.com/embed/4ZKjY8VxRQA?autoplay=0&mute=1&rel=0" title="GuardianGo Demo"></iframe>
       </div>
     </section>
 
     <section id="features">
       <h2>Key Features</h2>
       <div class="cards">
-        <div class="card">
-          <h3>Feature 1</h3>
-          <p>Brief description of feature 1 for demonstration purposes with elegant design and spacing.</p>
-        </div>
-        <div class="card">
-          <h3>Feature 2</h3>
-          <p>Feature 2 highlights the benefit to users with clean typography and layout.</p>
-        </div>
-        <div class="card">
-          <h3>Feature 3</h3>
-          <p>Explanation of feature 3 with placeholder demo content, keeping it visually appealing.</p>
-        </div>
+        <div class="card"><h3>Blockchain-secured IDs</h3><p>Digital Tourist IDs issued at entry points to ensure tamper-proof identity and travel data.</p></div>
+        <div class="card"><h3>Geo-fencing & AI Alerts</h3><p>Real-time monitoring with anomaly detection and proactive alerts in high-risk zones.</p></div>
+        <div class="card"><h3>Panic Button</h3><p>Instant live location sharing with police and emergency contacts for rapid response.</p></div>
+        <div class="card"><h3>Automated e-FIR</h3><p>Seamless emergency report filing directly from the system to concerned authorities.</p></div>
+        <div class="card"><h3>Offline Fallback</h3><p>SMS-based emergency alerts in remote/no-internet regions for uninterrupted safety.</p></div>
+        <div class="card"><h3>Multi-Lingual Support</h3><p>Accessible for diverse tourists including elderly and differently abled travelers.</p></div>
       </div>
     </section>
 
@@ -110,36 +100,59 @@
       <h2>Demo Videos</h2>
       <div class="cards">
         <div class="card">
-          <iframe src="https://www.youtube.com/embed/EXeTwQWrcwY" allowfullscreen></iframe>
-          <p>Demo Video 1 — Interactive showcase of product features with smooth hover animations.</p>
+          <iframe src="https://www.youtube.com/embed/VzvqaOY3t48" allowfullscreen></iframe>
+          <p>Travel through Northeast India — showcase of culture and landscapes alongside our safety vision.</p>
         </div>
         <div class="card">
           <iframe src="https://www.youtube.com/embed/YE7VzlLtp-4" allowfullscreen></iframe>
-          <p>Demo Video 2 — Highlighting functionality with a creative, engaging display.</p>
+          <p>GuardianGo in Action — simulated demo of features, alerts, and safety ecosystem.</p>
         </div>
+      </div>
+    </section>
+
+    <section id="tech">
+      <h2>Technical Approach</h2>
+      <div class="cards">
+        <div class="card"><h3>Languages</h3><p>Python (backend, data), Dart (Flutter app), Solidity (smart contracts).</p></div>
+        <div class="card"><h3>Frameworks</h3><p>TensorFlow, Flutter, Firebase, FastAPI, Google Maps & fl_chart.</p></div>
+        <div class="card"><h3>Blockchain</h3><p>Polygon-based smart contracts for immutable and trusted travel data.</p></div>
+        <div class="card"><h3>Location Services</h3><p>Fused Location Provider for efficient real-time geo-tracking.</p></div>
+      </div>
+    </section>
+
+    <section id="impact">
+      <h2>Impact & Benefits</h2>
+      <div class="cards">
+        <div class="card"><h3>Enhanced Tourist Safety</h3><p>Real-time monitoring, geo-fencing, and AI alerts ensure safer travel experiences.</p></div>
+        <div class="card"><h3>Trust & Confidence</h3><p>Live tracking and transparent security build confidence among tourists.</p></div>
+        <div class="card"><h3>Economic Growth</h3><p>Safer tourism boosts inflow, strengthens local businesses, and reduces losses.</p></div>
+        <div class="card"><h3>Social Impact</h3><p>Inclusive multilingual access and eco-friendly monitoring practices.</p></div>
       </div>
     </section>
 
     <section id="team">
-      <h2>Meet the Team</h2>
+      <h2>Meet the Team — !VibeCoders</h2>
       <div class="cards">
-        <div class="card">
-          <h3>John Doe</h3>
-          <p>Lead Developer — Handles core architecture and integrations.</p>
-        </div>
-        <div class="card">
-          <h3>Jane Smith</h3>
-          <p>Product Designer — Creates clean UI and user experience flows.</p>
-        </div>
-        <div class="card">
-          <h3>Alex Lee</h3>
-          <p>Project Manager — Oversees milestones and project delivery.</p>
-        </div>
+        <div class="card"><h3>Praveen</h3><p>Team Lead(Developer)</p></div>
+        <div class="card"><h3>Luson</h3><p>Team Member(Developer)</p></div>
+        <div class="card"><h3>Baibhab</h3><p>Team Member(Developer)</p></div>
+        <div class="card"><h3>Anu</h3><p>Team Member(Developer)</p></div>
+        <div class="card"><h3>Simran</h3><p>Team Member(Developer)</p></div>
+      </div>
+    </section>
+
+    <section id="references">
+      <h2>Research & References</h2>
+      <div class="cards">
+        <div class="card"><p>“Challenges in the Mobility of the Tourist in Arunachal Pradesh” – Int. Journal of Hospitality & Tourism Mgmt, 2022.</p></div>
+        <div class="card"><p>“Securing India’s Welcome: Why Tourist Reform Can’t Wait” – South Asian Herald.</p></div>
+        <div class="card"><p>Incredible India App study — lacks safety features compared to GuardianGo.</p></div>
+        <div class="card"><p>Data sources: Northeast official tourism data.</p></div>
       </div>
     </section>
 
     <footer>
-      &copy; 2025 SIH Product Demo. All rights reserved.
+      &copy; 2025 GuardianGo by !VibeCoders. All rights reserved.
     </footer>
   </div>
 </body>
